# GhostOps

./: .gitignore  GhostOps.js  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
beacon/include/: beacon.h
beacon/src/: checkin.c  context.c  file.c  loop.c  main.c  shell.c  tasks.c
client/: go.mod  main.go
client/internal/banner/: banner.go
client/internal/display/: colors.go  table.go
client/internal/models/: beacon.go  task.go
client/internal/repl/: commands.go  repl.go
ghostops/: ghostops.py
ghostops/common/: utils.py
ghostops/core/: base_module.py  module_base.py  utils.py
ghostops/modules/evasion/: no_api_exec.py
ghostops/modules/evasion/windows/: windows_xor_loader.py
ghostops/modules/execute/: windows_shellcode_executer.py
ghostops/modules/exploit/: shellshock.py
ghostops/modules/handler/: reverse_tcp_handler.py
ghostops/modules/handler/bind/tcp/: handler_bind_tcp.py
ghostops/modules/payload/windows/: windows_powershell_reverse_tcp.py
ghostops/modules/postexp/windows/: windows_reg_run_persistence.py
ghostops/modules/scanner/: tcp_port_scanner.py
loader/: main.c
server/: go.mod  main.go
server/banner/: banner.go
server/handlers/: c2.go  operator.go
server/store/: store.go
web/: index.html  login.html  panel.html
web/pages/: index.html  login.html  panel.html
web/public/css/: panel.css  style.css
web/public/js/: index.js  panel.js
web/static/css/: global.css  index.css  login.css  panel.css
web/static/js/: global.js  panel.js
web/views/: index.html
(+13 files in other folders)
